# sphere_sn

./: .gitignore  CMakeLists.txt  README.md  build.sh
analytical_solutions/: 17a.py
docs/: main.tex
examples/: template.yaml
examples/17a/: 100_cells_balance_table.txt  100_cells_scalar_flux.csv  100_cells_scalar_flux.ult  17a_100cells.yaml  17a_200cells.yaml  17a_50cells.yaml  200_cells_balance_table.txt  200_cells_scalar_flux.csv  200_cells_scalar_flux.ult  50_cells_balance_table.txt  50_cells_scalar_flux.csv  50_cells_scalar_flux.ult  phi_analytical_N100.ult  phi_analytical_N200.ult  phi_analytical_N50.ult
examples/17b/: 17b.yaml  17b_balance_table.txt  17b_scalar_flux.csv  17b_scalar_flux.ult
examples/17c/: 17c.yaml  17c_balance_table.txt  17c_scalar_flux.csv  17c_scalar_flux.ult
examples/17d/: 17d.yaml  17d_balance_table.txt  17d_scalar_flux.csv  17d_scalar_flux.ult
src/: Functions.cpp  Functions.hpp  InputData.hpp  InputParser.hpp  Solver.hpp  main.cpp
